[gd_scene load_steps=8 format=3 uid="uid://bikjv2tee5c68"]

[ext_resource type="Script" uid="uid://dehijf4vgur2x" path="res://scenes/Game.gd" id="1_s0nni"]
[ext_resource type="PackedScene" uid="uid://dfhxi2tmvyfhm" path="res://scenes/RaceUI/race_ui.tscn" id="3_kiw3p"]
[ext_resource type="PackedScene" uid="uid://dbh0hvgriey5t" path="res://scenes/menu/menu_ui.tscn" id="4_400sg"]
[ext_resource type="PackedScene" uid="uid://bgonoh37d21ge" path="res://scenes/pre_game_menu/pre_game_menu.tscn" id="5_g4kob"]
[ext_resource type="PackedScene" uid="uid://coj04cyiau4q1" path="res://scenes/ScoresUI/times_screen.tscn" id="6_aug50"]
[ext_resource type="PackedScene" uid="uid://3jel2w813t64" path="res://scenes/credits/credits.tscn" id="6_kiw3p"]
[ext_resource type="AudioStream" uid="uid://bmmhb5ajxqi6r" path="res://sound/music/main_theme.ogg" id="7_kiw3p"]

[node name="Game" type="Node2D"]
script = ExtResource("1_s0nni")

[node name="Game" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="Game"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Game/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="UI" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="UI"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="UI/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="RaceUI" parent="UI/SubViewportContainer/SubViewport" instance=ExtResource("3_kiw3p")]

[node name="MenuUI" parent="UI/SubViewportContainer/SubViewport" instance=ExtResource("4_400sg")]

[node name="PreGameMenu" parent="UI/SubViewportContainer/SubViewport" instance=ExtResource("5_g4kob")]
visible = false

[node name="TimesScreen" parent="UI/SubViewportContainer/SubViewport" instance=ExtResource("6_aug50")]
visible = false

[node name="Credits" parent="UI/SubViewportContainer/SubViewport" instance=ExtResource("6_kiw3p")]
visible = false

[node name="MainTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kiw3p")
volume_db = -18.0
autoplay = true

[connection signal="clicked_credits" from="UI/SubViewportContainer/SubViewport/MenuUI" to="." method="_on_menu_ui_clicked_credits"]
[connection signal="clicked_play" from="UI/SubViewportContainer/SubViewport/MenuUI" to="." method="_on_play_button_button_clicked"]
[connection signal="clicked_go_back" from="UI/SubViewportContainer/SubViewport/PreGameMenu" to="." method="_on_pre_game_menu_clicked_go_back"]
[connection signal="clicked_go_drift" from="UI/SubViewportContainer/SubViewport/PreGameMenu" to="." method="_on_pre_game_menu_clicked_go_drift"]
[connection signal="clicked_choose_level" from="UI/SubViewportContainer/SubViewport/TimesScreen" to="." method="_on_times_screen_clicked_choose_level"]
[connection signal="clicked_play_again" from="UI/SubViewportContainer/SubViewport/TimesScreen" to="." method="_on_times_screen_clicked_play_again"]
[connection signal="clicked_go_back" from="UI/SubViewportContainer/SubViewport/Credits" to="." method="_on_credits_clicked_go_back"]
